chore: bump json-schema-validator version